--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,17 +13,23 @@ h1 {
     font-size: 50px;
   }
 
+.timer{
+  text-align: right;
+  padding: 20px 200px ;
+  font-size: 40px;
+}
+
 .questions {
     text-align: center;
     margin: 40px auto;
   }
 
 .btn {
-text-align: center;
+  text-align: center;
   }
 
 button {
-    font-family:'Times New Roman', Times, serif ;
-    font-size: 50px;
-    background-color: blueviolet;
+  font-family:'Times New Roman', Times, serif ;
+  font-size: 50px;
+  background-color: blueviolet;
   }
