--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ h1 {
   text-align: center;
   }
 
-button {
+.button {
   font-family:'Times New Roman', Times, serif ;
   font-size: 50px;
   background-color: blueviolet;
